# apriltag_navigation

./: .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  COLLABORATION.md  README.md  TESTING_GUIDE.md  package.xml  setup.py
config/: map.yaml
data/excel/: README.md
docs/: API_Manual.md  Field_Test_Protocol.md  QA.md  System_Design_Report.md  TAG_COORDINATES.md
docs/temp/: Report.md  TEST.md
launch/: navigation.launch
nodes/: main_node.py
scripts/: diagnostics.py
src/apriltag_navigation/: __init__.py  robot_interface.py  test_helper.py  ui_helper.py
src/apriltag_navigation/hardware/: __init__.py  robot_controller.py
src/apriltag_navigation/map/: __init__.py  map_manager.py
src/apriltag_navigation/navigation/: __init__.py  pure_pursuit.py
src/apriltag_navigation/perception/: __init__.py  vision_module.py
